estructura html de la landing page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,244 @@
   <title>iJCode1 - Eco Store With Sass</title>
 </head>
 <body>
-  <h1>Utilizando Sass</h1>
+  <nav>
+    <a class="nav-title" href="/index.html">Eco-store</a>
+    <ul class="nav-list">
+      <li class="nav-item">
+        <img src="./assets/svg/profile.svg" alt="profile icon" class="nav-img" width="30px" height="30px">
+      </li>
+      <li class="nav-item">
+        <img src="./assets/svg/heart.svg" alt="heart icon" class="nav-img" width="30px" height="30px">
+      </li>
+      <li class="nav-item">
+        <img src="./assets/svg/shopping-cart.svg" alt="shopping-cart icon" class="nav-img" width="30px" height="30px">
+      </li>
+    </ul>
+  </nav>
+  <main>
+    <article class="impact">
+      <div class="impact-text">
+        <h2 class="impact-title">Impacto ecológico</h2>
+        <p class="impact-paragraph">Debido al impacto ambiental siendo las acciones humanas las que  modifican el ambiente, Eco-store se compromete a elaborar sus productos de manera artesanal y con materiales que favorecen al cuidado del medio ambiente.</p>
+        <button type="button" class="impact-cta">Conoce más</button>
+      </div>
+      <div class="impact-image">
+        <img src="./assets/img/main-2.jpg" alt="impact image" class="impact-img" width="280px">
+      </div>
+    </article>
+    <section class="healthcare">
+      <h2 class="healthcare-title">Cuidado de la Salud</h2>
+      <div class="healthcare-cards">
+        <div class="healthcare-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="healthcare-cta" width="20px" height="20px">
+          <div class="healthcare-content">
+            <img src="./assets/img/products/toothbrush.jpg" alt="toothbrush image" class="healthcare-image" width="280px">
+            <div class="healthcare-text">
+              <h4 class="healthcare-name">Cepillo de bambú</h4>
+              <p class="healthcare-paragraph">Paquete de 2 unidades hecho 100% de materiales ecológicos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="healthcare-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="healthcare-cta" width="20px" height="20px">
+          <div class="healthcare-content">
+            <img src="./assets/img/products/hand-cream.jpeg" alt="hand-cream image" class="healthcare-image" width="280px">
+            <div class="healthcare-text">
+              <h4 class="healthcare-name">Crema para manos</h4>
+              <p class="healthcare-paragraph">Crema hidratante con eucalipto ayuda al cuidado de la piel.</p>
+            </div>
+          </div>
+        </div>
+        <div class="healthcare-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="healthcare-cta" width="20px" height="20px">
+          <div class="healthcare-content">
+            <img src="./assets/img/products/serum.jpg" alt="serum image" class="healthcare-image" width="280px">
+            <div class="healthcare-text">
+              <h4 class="healthcare-name">Serum hidratante</h4>
+              <p class="healthcare-paragraph">Sérum hecho a base de extractos naturales y ácido hialurónico.</p>
+            </div>
+          </div>
+        </div>
+        <div class="healthcare-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="healthcare-cta" width="20px" height="20px">
+          <div class="healthcare-content">
+            <img src="./assets/img/products/organic-kit.jpg" alt="organic kit image" class="healthcare-image" width="280px">
+            <div class="healthcare-text">
+              <h4 class="healthcare-name">Kit de viaje</h4>
+              <p class="healthcare-paragraph">Incluye peine y cepillo de bambú, jabón orgánico de eucalipto y shampoo tamaño de viaje.</p>
+            </div>
+          </div>
+        </div>
+        <div class="healthcare-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="healthcare-cta" width="20px" height="20px">
+          <div class="healthcare-content">
+            <img src="./assets/img/products/organic-soap.jpg" alt="organic soap image" class="healthcare-image" width="280px">
+            <div class="healthcare-text">
+              <h4 class="healthcare-name">Set de jabones</h4>
+              <p class="healthcare-paragraph">Paquete de 2 unidades jabón de carbón activado con coco.</p>
+            </div>
+          </div>
+        </div>
+        <div class="healthcare-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="healthcare-cta" width="20px" height="20px">
+          <div class="healthcare-content">
+            <img src="./assets/img/products/guasha-kit.jpg" alt="guasha kit image" class="healthcare-image" width="280px">
+            <div class="healthcare-text">
+              <h4 class="healthcare-name">Kit de skincare</h4>
+              <p class="healthcare-paragraph">Incluye 2 rodillos y una gua sha.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="decor">
+      <h2 class="decor-title">Decoración del hogar</h2>
+      <div class="decor-cards">
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/wood-chair.jpg" alt="wood chair image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Silla de bambú</h4>
+              <p class="decor-paragraph">Disponible en 2 colores: blanco y negro, acabado de bambú.</p>
+            </div>
+          </div>
+        </div>
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/small-table.jpeg" alt="small table image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Banco pequeño</h4>
+              <p class="decor-paragraph">Ideal para agregar un toque de estilo a tus espacios.</p>
+            </div>
+          </div>
+        </div>
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/stand-table.jpg" alt="stand table image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Buró</h4>
+              <p class="decor-paragraph">Elaborado con bambú, cuenta con 2 compartimentos para guardar cosas.</p>
+            </div>
+          </div>
+        </div>
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/mueble.jpg" alt="mueble image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Cajonera</h4>
+              <p class="decor-paragraph">Paquete de 2 unidades hecho 100% de materiales ecológicos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/mirror.jpg" alt="mirror image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Espejo de pared</h4>
+              <p class="decor-paragraph">Paquete de 2 unidades hecho 100% de materiales ecológicos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/desk-lamp.jpg" alt="desk lamp image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Lámpara bambú</h4>
+              <p class="decor-paragraph">Paquete de 2 unidades hecho 100% de materiales ecológicos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/stand.jpg" alt="stand image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Mesita decorativa</h4>
+              <p class="decor-paragraph">Paquete de 2 unidades hecho 100% de materiales ecológicos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/mini-table.jpg" alt="mini table image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Mesa de desayuno</h4>
+              <p class="decor-paragraph">Paquete de 2 unidades hecho 100% de materiales ecológicos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="decor-card">
+          <img src="./assets/svg/heart.svg" alt="health icon" class="decor-cta" width="20px" height="20px">
+          <div class="decor-content">
+            <img src="./assets/img/furniture/table.jpg" alt="table image" class="decor-image" width="280px">
+            <div class="decor-text">
+              <h4 class="decor-name">Mesa decorativa</h4>
+              <p class="decor-paragraph">Paquete de 2 unidades hecho 100% de materiales ecológicos.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about">
+      <h2 class="about-title">¿Por qué nosotros?</h2>
+      <div class="about-content">
+        <div class="about-element">
+          <img src="./assets/img/earth.png" alt="earth image" width="80px" height="80px">
+          <h3 class="about-info">Compromiso con el medio ambiente garantizando el uso de materiales 100% reciclables.</h3>
+        </div>
+        <div class="about-element">
+          <img src="./assets/img/ecology.png" alt="ecology image" width="80px" height="80px">
+          <h3 class="about-info">Innovando con estilo el diseño de nuestros muebles es único.</h3>
+        </div>
+      </div>
+    </section>
+    <section class="gallery">
+      <h2 class="gallery-title">Galería de estilos</h2>
+      <div class="gallery-images">
+        <div class="gallery-image">
+          <img src="./assets/img/gallery-1.jpg" alt="gallery image" width="280px" height="280px">
+        </div>
+        <div class="gallery-image">
+          <img src="./assets/img/gallery-2.jpg" alt="gallery image" width="280px" height="280px">
+        </div>
+        <div class="gallery-image">
+          <img src="./assets/img/gallery-3.jpg" alt="gallery image" width="280px" height="280px">
+        </div>
+      </div>
+    </section>
+    <section class="location">
+      <h2 class="location-title">Encuéntranos en</h2>
+      <div class="location-frame">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5822.219913835893!2d-4.821558846623192!3d43.144220257518924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd49cc070931f453%3A0x90dd2682e3c9f685!2s39588%20Fuente%20D%C3%A9%2C%20Cantabria%2C%20Spain!5e0!3m2!1sen!2smx!4v1681601423926!5m2!1sen!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="location-info">
+        <p>Fuente Dé</p>
+        <p>39588 Fuente Dé, Cantabria, Spain</p>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="footer-info">
+      <a href="/index.html" class="footer-link">Eco-store</a>
+      <div class="footer-links">
+        <p class="footer-link">Link</p>
+        <p class="footer-link">Link</p>
+        <p class="footer-link">Link</p>
+        <p class="footer-link">Link</p>
+      </div>
+    </div>
+    <div class="footer-social">
+      <img src="./assets/img/facebook-logo.png" alt="facebook logo" width="25px" height="25px">
+      <img src="./assets/img/instagram-logo.png" alt="instagram logo" width="25px" height="25px">
+      <img src="./assets/img/twitter-logo.png" alt="twitter logo" width="25px" height="25px">
+    </div>
+  </footer>
 </body>
 </html>
